added accordion to rental page with js and css

--- a/buffalosedge/rental.html
+++ b/buffalosedge/rental.html
@@ -113,9 +113,87 @@
           </tr>
         </tbody>
       </table>
-  
-
-  
+      <hr>
+      <div class="container">
+        <h2>FAQs</h2>
+        <h3>Got questions? We've got answers.</h3>
+        <div class="accordion">
+          <div class="accordion-item">
+            <button id="accordion-button-1" aria-expanded="false">
+              <span class="accordion-title">What's included with a canoe rental?</span>
+              <span class="icon" aria-hidden="true"></span>
+            </button>
+            <div class="accordion-content">
+              <p>
+                Each canoe rental includes paddles, life jackets (PFDs), and a mesh trash bag to help keep the river clean. Everything you need for a safe and enjoyable float is included!
+              </p>
+            </div>
+          </div>
+          <div class="accordion-item">
+            <button id="accordion-button-2" aria-expanded="false">
+              <span class="accordion-title">Do I need any experience to rent a canoe?</span>
+              <span class="icon" aria-hidden="true"></span>
+            </button>
+            <div class="accordion-content">
+              <p>
+               No prior experience is needed! Our routes are beginner-friendly, and we'll provide basic instructions before you head out.
+              </p>
+            </div>
+          </div>
+          <div class="accordion-item">
+            <button id="accordion-button-3" aria-expanded="false">
+              <span class="accordion-title"> Is there an age limit for canoe rentals?</span>
+              <span class="icon" aria-hidden="true"></span>
+            </button>
+            <div class="accordion-content">
+              <p>
+           Children are welcome to ride along with adults. However, participants under 18 must be accompanied by a parent or guardian.
+              </p>
+            </div>
+          </div>
+           <div class="accordion-item">
+            <button id="accordion-button-3" aria-expanded="false">
+              <span class="accordion-title"> Do you rent gear like dry bags or coolers?</span>
+              <span class="icon" aria-hidden="true"></span>
+            </button>
+            <div class="accordion-content">
+              <p>
+           At this time, we do not rent additional gear. You're welcome to bring your own dry bags, coolers, or other float gear.
+              </p>
+            </div>
+          </div>
+          <div class="accordion-item">
+            <button id="accordion-button-3" aria-expanded="false">
+              <span class="accordion-title"> When are the quiet hours?</span>
+              <span class="icon" aria-hidden="true"></span>
+            </button>
+            <div class="accordion-content">
+              <p>
+          Quiet hours are between the hours of 10:30 p.m. and 7:00 a.m. 
+              </p>
+            </div>
+          </div>
+           <div class="accordion-item">
+            <button id="accordion-button-3" aria-expanded="false">
+              <span class="accordion-title"> What should I bring for a canoe trip?</span>
+              <span class="icon" aria-hidden="true"></span>
+            </button>
+            <div class="accordion-content">
+              <p> We recommend bringing the following: Sunscreen, Bug spray, Towels, Dry clothes, Old tennis shoes or water shoes, Plenty to eat and drink, Life vests (two are included with each canoe rental).
+              </p>
+            </div>
+          </div><div class="accordion-item">
+            <button id="accordion-button-3" aria-expanded="false">
+              <span class="accordion-title"> What should I not bring on the river?</span>
+              <span class="icon" aria-hidden="true"></span>
+            </button>
+            <div class="accordion-content">
+              <p> Please avoid bringing the following items: Glass containers, Styrofoam coolers, No firearms (on premises or in canoes), No alcoholic beverages (prohibited by law).
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
       
      
       <div class="row-circle">
