--- a/buffalosedge/booking.html
+++ b/buffalosedge/booking.html
@@ -2,22 +2,17 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8" />
   <title>Buffalo's Edge Retreat</title>
-  <meta name="description" content="Buffalo's Edge Retreat cabin and canoe rentals" />
+  <meta charset="UTF-8" />
+  <meta name="description" content="Keyword rich narrative on site purpose" />
   <meta name="author" content="Cassandra Helmick" />
-
-  
- 
-
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@400..700&family=Sigmar&family=Space+Grotesk:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://use.typekit.net/sda3rnl.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  <link rel="stylesheet" href="assets/css/style.css">
-
-  <link rel="icon" href="assets/img/buffalo-logo.svg" type="image/svg+xml">
+  <link rel="stylesheet" href="https://use.typekit.net/sda3rnl.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Caveat:wght@400..700&family=Sigmar&family=Space+Grotesk:wght@300..700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="assets/css/style.css" />
 </head>
 
 <body>
@@ -47,8 +42,6 @@
       <h2 class="title">BOOK NOW! </h2>
     </div>
 
-    <h2 class="tag">Adventure starts here.</h2>
-</section>
     <section class="intro">
         <div class="book-cabin">
       <h3>Book a Cabin</h3>
@@ -92,7 +85,7 @@
 
   <div class="book-canoe">
 
-      <h3 class="story">Book a Canoe</h3>
+      <h3 class="story">Rent a Canoe</h3>
       <aside role="complementary">
         <div class="rates2">
           <article class="widget">
